--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
     </div>
     
     <!-- Header Image -->
-    <img src="D:\Company\Wedding\image\13.jpeg" alt="Wedding Header" class="header-image">
+    <img src="13.jpeg" alt="Wedding Header" class="header-image">
     
     <div class="container">
         <div class="header">
@@ -936,7 +936,7 @@
             <h2 id="video-title">Our Journey</h2>
             <div class="video-container">
                 <video controls autoplay muted poster="https://via.placeholder.com/600x400?text=Pre-Shoot+Video+Poster">
-                    <source src="D:\Company\Wedding\image\1.mp4" type="video/mp4">
+                    <source src="1.mp4" type="video/mp4">
                     Your browser does not support the video tag. <a href="https://via.placeholder.com/pre-shoot-video.mp4">Click here to download the video</a>.
                 </video>
             </div>
@@ -1238,3 +1238,4 @@
 </body>
 
 </html>
+
