--- a/index.html
+++ b/index.html
@@ -1210,53 +1210,6 @@
         video {
             pointer-events: none;
         }
-
-        #message {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: #ffcc00;
-            color: #222;
-            padding: 12px 25px;
-            border-radius: 25px;
-            font-size: 1rem;
-            font-weight: 600;
-            box-shadow: 0 4px 10px rgba(255, 204, 0, 0.5);
-            cursor: pointer;
-            user-select: none;
-            opacity: 0;
-            pointer-events: none;
-            animation: fadeInPulse 1s forwards ease 1s;
-        }
-
-        #message.show {
-            opacity: 1;
-            pointer-events: auto;
-        }
-
-        @keyframes fadeInPulse {
-            0% {
-                opacity: 0;
-                transform: translateX(-50%) scale(0.9);
-            }
-
-            70% {
-                opacity: 1;
-                transform: translateX(-50%) scale(1.05);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateX(-50%) scale(1);
-            }
-        }
-
-        #message:hover {
-            box-shadow: 0 6px 15px rgba(255, 204, 0, 0.7);
-            transform: translateX(-50%) scale(1.1);
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
     </style>
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Serif+Tamil:wght@400;700&family=Lora:wght@400;700&family=Great+Vibes&family=Tangerine:wght@400;700&display=swap"
@@ -1271,6 +1224,8 @@
 
     <!-- Header Image -->
     <img src="1.jpeg" alt="Wedding Header" class="header-image">
+
+
 
     <div class="container">
         <div class="header">
@@ -1309,6 +1264,18 @@
                     <div class="countdown-label">Seconds</div>
                 </div>
             </div>
+            <button id="playBtn">Play Background Music</button>
+
+            <audio id="bgMusic" loop>
+                <source src="sound.mp3" type="audio/mpeg">
+            </audio>
+
+            <script>
+                document.getElementById("playBtn").addEventListener("click", function () {
+                    document.getElementById("bgMusic").play();
+                    this.style.display = "none"; // hide the button after playing
+                });
+            </script>
         </div>
         <div class="invitation-details parallax">
             <h2 id="couple-name">Loshan & Abi</h2>
@@ -1337,39 +1304,8 @@
             </div>
         </div>
 
-        <audio id="bgMusic" loop preload="auto" src="1.mp3"></audio>
 
-        <div id="message">Tap here to enable background sound</div>
 
-        <script>
-            const bgMusic = document.getElementById('bgMusic');
-            const msg = document.getElementById('message');
-
-            // Start muted autoplay
-            bgMusic.muted = true;
-            bgMusic.play().catch(() => { });
-
-            function tryPlayUnmuted() {
-                bgMusic.muted = false;
-                bgMusic.play().then(() => {
-                    msg.classList.remove('show');
-                    window.removeEventListener('scroll', onScroll);
-                }).catch(() => {
-                    msg.classList.add('show');
-                });
-            }
-
-            function onScroll() {
-                tryPlayUnmuted();
-            }
-
-            window.addEventListener('scroll', onScroll, { passive: true });
-
-            msg.addEventListener('click', () => {
-                tryPlayUnmuted();
-                msg.remove();  // Remove the message after click
-            });
-        </script>
 
 
         <div class="timeline">
