--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
             <button id="playBtn">Play Background Music</button>
 
             <audio id="bgMusic" loop>
-                <source src="sound.mp3" type="audio/mpeg">
+                <source src="1.mp3" type="audio/mpeg">
             </audio>
 
             <script>
@@ -1633,3 +1633,4 @@
 </body>
 
 </html>
+
