--- a/index.html
+++ b/index.html
@@ -1409,7 +1409,7 @@
     </div>
 
     <!-- Footer Image -->
-    <img src="19.jpeg" alt="Wedding Footer" class="footer-image">
+    <img src="Loshan & Abinaya P5.jpg" alt="Wedding Footer" class="footer-image">
 
     <div class="scroll-to-top" onclick="scrollToTop()">
         <i class="fas fa-arrow-up"></i>
@@ -1620,4 +1620,5 @@
 </body>
 
 </html>
+
 
