--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,7 @@
                 <div class="slideshow-container" id="slideshow-container">
                     <!-- Slide 1 -->
                     <div class="slide active">
-                        <img src="3.jpeg" alt="Pre-Shoot Moment">
+                        <img src="Loshan & Abinaya P3" alt="Pre-Shoot Moment">
                         <div class="slide-overlay">
                             <h3 class="slide-title">First Look</h3>
                         </div>
@@ -1347,17 +1347,25 @@
 
                     <!-- Slide 2 -->
                     <div class="slide">
-                        <img src="8.jpeg" alt="Pre-Shoot Moment">
+                        <img src="Loshan & Abinaya P7.jpg" alt="Pre-Shoot Moment">
                     </div>
 
                     <!-- Slide 3 -->
                     <div class="slide">
-                        <img src="10.jpeg" alt="Pre-Shoot Moment">
+                        <img src="Loshan & Abinaya P10.jpg" alt="Pre-Shoot Moment">
                     </div>
 
                     <!-- Slide 4 -->
                     <div class="slide">
-                        <img src="15.jpeg" alt="Pre-Shoot Moment">
+                        <img src="Loshan & Abinaya P8.jpg" alt="Pre-Shoot Moment">
+                    </div>
+
+                     <div class="slide">
+                        <img src="Loshan & Abinaya P9.jpg" alt="Pre-Shoot Moment">
+                    </div>
+
+                    <div class="slide">
+                        <img src="Loshan & Abinaya P4.jpg" alt="Pre-Shoot Moment">
                     </div>
                 </div>
 
@@ -1377,16 +1385,22 @@
             <!-- Thumbnail Navigation -->
             <div class="thumbnail-container">
                 <div class="thumbnail active" onclick="goToSlide(0)">
-                    <img src="3.jpeg" alt="Thumbnail 1">
+                    <img src="Loshan & Abinaya P3" alt="Thumbnail 1">
                 </div>
                 <div class="thumbnail" onclick="goToSlide(1)">
-                    <img src="8.jpeg" alt="Thumbnail 2">
+                    <img src="Loshan & Abinaya P7.jpg" alt="Thumbnail 2">
                 </div>
                 <div class="thumbnail" onclick="goToSlide(2)">
-                    <img src="10.jpeg" alt="Thumbnail 3">
+                    <img src="Loshan & Abinaya P10.jpg" alt="Thumbnail 3">
                 </div>
                 <div class="thumbnail" onclick="goToSlide(3)">
-                    <img src="15.jpeg" alt="Thumbnail 4">
+                    <img src="Loshan & Abinaya P8.jpg" alt="Thumbnail 4">
+                </div>
+                <div class="thumbnail" onclick="goToSlide(3)">
+                    <img src="Loshan & Abinaya P9.jpg" alt="Thumbnail 4">
+                </div>
+                             <div class="thumbnail" onclick="goToSlide(3)">
+                    <img src="Loshan & Abinaya P4.jpg" alt="Thumbnail 4">
                 </div>
             </div>
         </div>
@@ -1620,5 +1634,6 @@
 </body>
 
 </html>
+
 
 
