--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,7 @@
                 <div class="slideshow-container" id="slideshow-container">
                     <!-- Slide 1 -->
                     <div class="slide active">
-                        <img src="Loshan & Abinaya P3" alt="Pre-Shoot Moment">
+                        <img src="Loshan & Abinaya P3.jpg" alt="Pre-Shoot Moment">
                         <div class="slide-overlay">
                             <h3 class="slide-title">First Look</h3>
                         </div>
@@ -1634,6 +1634,7 @@
 </body>
 
 </html>
+
 
 
 
