--- a/index.html
+++ b/index.html
@@ -1385,7 +1385,7 @@
             <!-- Thumbnail Navigation -->
             <div class="thumbnail-container">
                 <div class="thumbnail active" onclick="goToSlide(0)">
-                    <img src="Loshan & Abinaya P3" alt="Thumbnail 1">
+                    <img src="Loshan & Abinaya P3.jpg" alt="Thumbnail 1">
                 </div>
                 <div class="thumbnail" onclick="goToSlide(1)">
                     <img src="Loshan & Abinaya P7.jpg" alt="Thumbnail 2">
@@ -1634,6 +1634,7 @@
 </body>
 
 </html>
+
 
 
 
